added basic functionality for creating new users in postgres table

--- a/loginapi/docker-compose.yml
+++ b/loginapi/docker-compose.yml
@@ -1,6 +1,13 @@
 services:
-  postgres-sql:
+  testing-postgres-db:
     image: postgres
     restart: always
     volumes:
-      -
+      - ./pgdata:/var/lib/postgresql/data
+    ports:
+      - 5432:5432
+  adminer:
+    image: adminer
+    restart: always
+    ports:
+      - 8080:8080
