--- a/data-pipeline/requirements.txt
+++ b/data-pipeline/requirements.txt
@@ -1,7 +1,41 @@
-Pandas
-kafka-python
-keyBert
-Torch
-numpy
-vaderSentiment
-sentence-transformers
+dotenv==0.9.9
+huggingface-hub==0.30.1
+idna==3.10
+joblib==1.4.2
+kafka-python==2.1.4
+keybert==0.9.0
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+mdurl==0.1.2
+mpmath==1.3.0
+networkx==3.4.2
+numpy==2.2.4
+packaging==24.2
+pandas==2.2.3
+pillow==11.1.0
+py4j==0.10.9.7
+Pygments==2.19.1
+python-dateutil==2.9.0.post0
+python-dotenv==1.1.0
+pytz==2025.2
+requests==2.32.3
+rich==14.0.0
+safetensors==0.5.3
+scikit-learn==1.6.1
+scipy==1.15.2
+sentence-transformers==4.0.1
+setuptools==78.1.0
+six==1.17.0
+sympy==1.13.1
+threadpoolctl==3.6.0
+tokenizers==0.21.1
+torch==2.6.0
+torchvision==0.20
+torchaudio==2.5
+tqdm==4.67.1
+transformers==4.50.3
+triton==3.2.0
+typing_extensions==4.13.0
+tzdata==2025.2
+urllib3==2.3.0
+vaderSentiment==3.3.2
