--- a/data-processing-pipeline/sentiment-analysis-service/requirements.txt
+++ b/data-processing-pipeline/sentiment-analysis-service/requirements.txt
@@ -1,5 +1,8 @@
-transformers
-sentencepiece
-kafka-python
-pandas
-numpy
+transformers==4.50.3
+sentencepiece==0.2.0
+kafka-python==2.1.4
+pandas==2.2.3
+numpy==2.2.4
+huggingface-hub==0.30.1
+torch==2.5.0
+protobuf==6.30.2
