removing helm + fixes + removing cilium related configs

--- a/kubernetes/reset.yaml
+++ b/kubernetes/reset.yaml
@@ -34,7 +34,7 @@
         #- metrics-server
        # - victoria-logs
        # - victoria-metrics
-        - helm
+       # - helm
       loop_control:
         loop_var: reset
       tags: always
