--- a/kubernetes/inventory/hosts.yaml
+++ b/kubernetes/inventory/hosts.yaml
@@ -3,15 +3,19 @@ server: #
   hosts:
     tiamat:
       ansible_host: 10.0.0.167
-      ansible_user: vchen7629
-      ansible_ssh_private_key_file: ~/.ssh/id_ed25519
-      ansible_become_password: Zebcityofdoom24
+      ansible_user: root
+      #ansible_ssh_private_key_file: ~/.ssh/id_ed25519
+      #ansible_become_password: Zebcityofdoom24
+      ansible_password: 5526
+      ansible_ssh_common_args: '-o StrictHostKeyChecking=no'
+      ansible_become_password: 5526
     #ryujin:
 
     #tachyon:
 
 agent:
   tempest:
+    ansible_host:
   fafnir:
   glaurung:
   bahumat:
