--- a/kubernetes/roles/argo-cd/tasks/facts.yaml
+++ b/kubernetes/roles/argo-cd/tasks/facts.yaml
@@ -1,6 +1,12 @@
 - name: Set map fact
   ansible.builtin.set_fact:
     argocd_map:
+      credentials:
+        admin:  
+          password: "{{ argocd_vars.kubernetes.server.credentials.admin.password | string | password_hash('blowfish') }}"
+        user: 
+          name: "{{ argocd_vars.kubernetes.server.credentials.user.name }}"
+          password: "{{ argocd_vars.kubernetes.server.credentials.user.password | string | password_hash('blowfish') }}"
       helm:
         chart:
           reference: '{{ argocd_vars.kubernetes.helm.repository.org }}/{{ argocd_vars.kubernetes.helm.chart.name }}'
@@ -11,7 +17,14 @@
         repository:
           name: '{{ argocd_vars.kubernetes.helm.repository.org }}/{{ argocd_vars.kubernetes.helm.repository.name }}'
           url: '{{ argocd_vars.kubernetes.helm.repository.url }}/{{ argocd_vars.kubernetes.helm.repository.name }}'
-        timeout: 10m0s
+        timeout: 20m0s
+      metrics:
+        monitor:
+          enabled: true
+          scrape:
+            interval: 30s
+            timeout: 25s
+        namespace: argocd-monitoring
 
 
 
@@ -30,4 +43,14 @@
   ansible.builtin.set_fact:
     argocd_vars: '{{ argocd_vars }}'
   run_once: true
-    
+
+- name: Set Argocd Account data
+  ansible.builtin.set_fact:
+    argocd_accounts:
+      server:
+        users: 
+        - name: '{{ argocd_map.credentials.user.name }}'
+          password: '{{ argocd_map.credentials.user.password }}'
+          permissions: 'apikey, login'
+          role: admin
+          enabled: true
