--- a/kubernetes/roles/argo-cd/defaults/main.yaml
+++ b/kubernetes/roles/argo-cd/defaults/main.yaml
@@ -8,7 +8,7 @@ argocd_vars:
         name: argo-helm
         org: argoproj
         url: https://argoproj.github.io
-    namespace: kube-system
+    namespace: argocd
     controller:
       replicas: 1
       resources:
@@ -48,10 +48,10 @@ argocd_vars:
       resources:
         limits:
           cpu: null
-          memory: 128Mi
+          memory: 512Mi
         requests: 
           cpu: 10m
-          memory: 128Mi
+          memory: 256Mi
     server: 
       autoscaling:
         enabled: true
