--- a/kubernetes/roles/prometheus/tasks/reset.yaml
+++ b/kubernetes/roles/prometheus/tasks/reset.yaml
@@ -1,7 +1,16 @@
-- name: Uninstall nginx application in argocd
+- name: Uninstall prometheus crds in argocd
   kubernetes.core.k8s:
     api_version: argoproj.io/v1alpha1
     state: absent
     kind: Application
-    name: prometheus-crds
+    name: prometheus-operator-crds
     namespace: argocd
+
+- name: Uninstall prometheus operator in argocd
+  kubernetes.core.k8s:
+    api_version: argoproj.io/v1alpha1
+    state: absent
+    kind: Application
+    name: prometheus-operator
+    namespace: argocd
+
