--- a/kubernetes/roles/calico/argocd-network-policies/dex-server.yaml
+++ b/kubernetes/roles/calico/argocd-network-policies/dex-server.yaml
@@ -18,6 +18,9 @@ spec:
         ports: [5556, 5557]   
     - action: Allow # exposing ArgoCD dex controller metrics endpoint
       protocol: TCP
+      source: 
+        namespaceSelector: projectcalico.org/name == "prometheus"
+        selector: app.kubernetes.io/instance == "prometheus-operator"
       destination:
         ports: [5558]
   egress:
