--- a/kubernetes/roles/prometheus/templates/prometheus-operator-crds.yaml
+++ b/kubernetes/roles/prometheus/templates/prometheus-operator-crds.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata: 
-  name: prometheus-crds
+  name: prometheus-operator-crds
   namespace: argocd
   finalizers:
     - resources-finalizer.argocd.argoproj.io
@@ -32,10 +32,10 @@ spec:
           
           thanosrulers:
             enabled: false
-
+      
   destination:
     server: https://kubernetes.default.svc
-    namespace: argocd
+    namespace: prometheus
 
   syncPolicy:
     automated:
@@ -43,3 +43,4 @@ spec:
       selfHeal: true
     syncOptions:
       - ServerSideApply=true
+      - CreateNamespace=true
