--- a/.github/workflows/cyphria-frontend.yaml
+++ b/.github/workflows/cyphria-frontend.yaml
@@ -5,13 +5,15 @@ on:
         - cron: '59 11 * * *'
     push:
         branches:
-            - main
+          - main
+        paths:
+          - 'frontend'
     
 permissions:
     packages: write
 
 jobs:
-    build-and-push-frontend-image:
+    argocd-frontend:
         runs-on: ubuntu-latest
         steps: 
             - name: Checkout repository
@@ -20,20 +22,17 @@ jobs:
             - name: Set up Docker Buildx
               uses: docker/setup-buildx-action@v3 # v3.0.0
 
-            - name: Log into registry $https://ghcr.io
-              if: github.event_name != 'pull_request'
+            - name: Log in to GitHub Container Registry
               uses: docker/login-action@v3 # v3.0.0
               with:
-                registry: https://ghcr.io
+                registry: ghcr.io
                 username: ${{ github.actor }}
                 password: ${{ secrets.GITHUB_TOKEN }}
             
             - name: Build and push Docker image
-              id: build-and-push
               uses: docker/build-push-action@v5
               with:
                 context: ./frontend
                 file: ./frontend/Dockerfile
                 push: true
                 tags: ghcr.io/vchen7629/cyphria-frontend:latest
-                cache-from: type=registry,ref=ghcr.io/vchen7629/cyphria-frontend-npm-cache:latest
