--- a/.github/workflows/cyphria-frontend.yaml
+++ b/.github/workflows/cyphria-frontend.yaml
@@ -7,7 +7,7 @@ on:
         branches:
           - main
         paths:
-          - 'frontend/*'
+          - 'frontend/**'
     
 permissions:
     packages: write
