modified folder structure

--- a/kubernetes/provisioning.yaml
+++ b/kubernetes/provisioning.yaml
@@ -35,7 +35,6 @@
         name: "{{ postinstall }}"
         tasks_from: postinstall
       loop: 
-        - calico
         - argo-cd
       loop_control:
         loop_var: postinstall
@@ -44,5 +43,5 @@
     - argo-cd
     - nginx
     - prometheus
-    - nginx
+    - network-policies
   tags: charts
